styles/style.css
:root {
    font-size: 1rem;
}

@media screen(min-width:800px) {
    :root {
        font-size: 0.7rem;
    }
}

html {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    width: 100%;
    height: 100;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: white;
    position: relative;
    padding-bottom: 90px;
    /*put the height/width of the footer (see this value in the web browser's Dev tools) in pixels as its value*/
    min-height: 100vh;
    /*vh (viewport height as unit of measure))*/
}

a {
    text-decoration: none;
}

#navigation-bar {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-bottom: 3rem;
    margin-top: 0.5rem;

    max-width: min-max(800px, 100%);

}

#search-bar {

    width: 85%;


}

#search-button {
    /*    position: relative;*/
    /*    top: 0.4rem;*/
    /*    left: -0.25rem;*/
    /*    padding: 0.3rem 0.4rem;*/
    background-color: lightgrey;
    margin-top: inherit;
}

.search-club {
    border-collapse: collapse;
    height: 70%;
    display: inline-flex;
    align-self: center;
    border-width: thin;
    top: inherit;
}

/*
#search-icon {
    color: grey;

}
*/

#upload-icon {
    position: relative;
    top: 0.5rem;
}

#sign-in-button {
    color: white;
    background-color: rgb(27, 138, 212);
    padding: 0.7rem;
    font-weight: bold;
    position: relative;
}

.main-containers {
    display: grid;
    grid-template-columns: minmax(400px, 4fr) minmax(200px, 1fr);
    grid-auto-flow: column;
    grid-auto-columns: 200px;
    grid-template-areas: "a b";
    /* grid-template-rows: 4fr 200px; */
}

#main-container-1 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    grid-area: a;
}

#main-container-2 {
    /* grid-area: b; */
}

#video {
    margin-left: 0;
}

.videotitle-and-info {
    border-top: 1rem solid rgb(240, 233, 233);
    border-right: 1rem solid rgb(240, 233, 233);
    border-bottom: 1rem solid rgb(240, 233, 233);
    border-left: 0.5rem solid rgb(240, 233, 233);
    align-self: center;
    overflow-x: scroll;

}

.youtubername-and-views,
.youtuberavatar-and-subscribebutton {
    display: inline-block;
}

#youtuber-avatar {
    margin-bottom: 3rem;
}

#youtubername-and-subscribebutton {
    position: relative;
    top: -2.3rem;
}

#youtuber-name {
    font-weight: bold;
}

.subscribebutton-and-number {
    display: inline;
}

#subscribe-button {
    background-color: red;
    color: white;
    border: 0.1rem solid red;
    padding: 0.4rem;
}

#number-of-subscribers {
    border: 0.1rem solid rgb(240, 233, 233);
    padding: 0.4rem;
    margin-left: -0.3rem;
}

#number-of-views {
    position: relative;
    right: -30rem;
    border-bottom: 0.15rem solid rgb(27, 138, 212);
}

#youtubername-and-views {
    border-bottom: 0.2rem solid rgb(240, 233, 233);
}

.videoinfo-container-buttons {
    display: inline-block;
    outline: none;
    background-color: rgb(240, 233, 233);
}

#right-video-buttons {
    position: relative;
    right: -28rem;
}

.video-info {
    color: black;
    display: block;
}

#showmore-1 {
    color: rgb(187, 180, 180);
    text-align: center;
    border-top: 0.05rem solid rgb(240, 233, 233);
    padding-top: 0.6rem;
}

#number-of-comments {
    color: rgb(187, 180, 180);
    font-size: 1.2rem;
    border-right: 1rem solid rgb(240, 233, 233);
    border-left: 0.2rem solid rgb(240, 233, 233);
    margin-bottom: 0;
    margin-top: 0;
}

#user-avatar {
    margin-bottom: 1rem;
}

#post-comment-button {
    margin-left: 47rem;
}

#numberofcomments-and-postingacomment {
    padding: 2rem;
    background-color: white;
    border-right: 1rem solid rgb(240, 233, 233);
    /* border-bottom: 1rem solid rgb(240, 233, 233);*/
    border-left: 0.2rem solid rgb(240, 233, 233);
}

#post-comment-button {
    position: relative;
    top: 1rem;
    right: 3rem;
}

#main-container-2 {
    margin-left: 5rem;
    background-color: white;
    /* border-bottom: 1rem solid rgb(240, 233, 233); */
    /* border-left: 0.1rem solid rgb(240, 233, 233);  */
    /* border: 0.05rem solid rgb(240, 233, 233); */
}

#uploadtext-and-autoplayimage {
    display: inline-block;
}

.upload-and-autoplay {
    display: inline-block;
}

#up-next {
    color: grey;
    font-size: 2rem;
}

#autoplay {
    position: relative;
    left: -1rem;
    top: 1rem;
}

.recommended-videos {
    display: inline-block;
}

.rec-vid-text {
    position: relative;
    top: -4rem;
}

.recommended-videos-text {
    display: block;
}

.user-names,
.recommendedvideos-views {
    color: grey;
}

.user-names {
    font-size: 0.8rem;
}

footer {
    background-color: rgb(236, 230, 230);
    padding: 20px;
    /* width: 100%; */
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
}

.footer-container-1 {
    display: inline-block;
}

#youtube-logo-footer {
    margin-top: 1rem;
}

.footer-buttons {
    padding: 0.3rem;
    background-color: rgb(219, 211, 211);
    border: none;
}

.history-and-help-icons {
    width: 1rem;
    height: -0.5rem;
    color: grey;
}

.footer-links-top {
    font-size: 1rem;
    color: rgb(104, 102, 102);
    font-weight: bold;
}

.footer-links-bottom {
    color: rgb(161, 160, 160);
}

/* http: //meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126 License: none (public domain) */
html,
body,
div,
span,
iframe,
a,
aside,
footer,
nav,
section {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
aside,
footer,
nav,
section {
    display: block;
}

body {
    line-height: 1;
}

